--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,72 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1>Cinema Project</h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+<html ng-app="movie">
+
+<head>
+  <title>Create Movie</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+    crossorigin="anonymous">
+  <link rel='stylesheet' href='/stylesheets/style.css' />
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <link rel="stylesheet" href="/resources/demos/style.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+  <script src="/javascripts/index.js"></script>
+
+</head>
+
+<body ng-controller="listMovieController">
+
+  <div class="header">
+    <div class="topheader" style="    width: 100%;
+          height: 100px;
+          color: #FFFFFF;
+          font-family: 'Righteous', cursive;
+          background-image: linear-gradient(#CCCCCC,#888888, #000000);
+          padding: 1px"
+      ;>
+      <h1> Cinema Project </h1>
+    </div>
+  </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light " style="background-image: linear-gradient(#EEEEEE	,#DDDDDD, #000000)">
+    <a class="navbar-brand" href="#">
+      <img src="/images/image.png" width="30" height="30" alt="">
+    </a>
+    <a class="navbar-brand" href="#">ProjectCinema</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Search</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav" style="margin-left:auto">
+        <li class="nav-items">
+          <a class="nav-link" href="#">Sign
+            Up </a>
+        </li>
+        <li class="nav-items">
+          <a class="nav-link " href="#" style="text-align:right">Sign In</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+  <div>
+    <img ng-src="/images/test.jpg" class="img-responsive" alt="" src="/images/test.jpg" style="margin-top: 100px" ;>
+    <div class="detail">
+      <h2 class="tenphim"> ABC</h2>
+      <p>
+        <span> Thể loại: </span>Test </p>
+      <p><span>Ngày ra mắt:</span>Test</p>
+
+    </div>
+  </div>
+</body>
+
 </html>
