--- a/views/movie/create.ejs
+++ b/views/movie/create.ejs
@@ -2,7 +2,10 @@
 <html ng-app="movie">
 
 <head>
+ 
   <title>Create Movie</title>
+  
+  <script src="/javascripts/movie/create.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
     crossorigin="anonymous">
@@ -10,60 +13,31 @@
     crossorigin="anonymous">
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <link rel="stylesheet" href="/resources/demos/style.css">
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
   <script>
     $(function () {
       $("#datepicker").datepicker();
-      $("#datepicker").datepicker('setDate','today');
+      $("#datepicker").datepicker('setDate', 'today');
     });
   </script>
 
 </head>
 <style class="Main header">
-  body {
+  /* body {
   background-image: url("https://staticdelivery.nexusmods.com/images/110/535448-1328651760.jpg");
   background-size: cover
-}
+} */
     .createMovie{font-weight: bold;color:rgb(240, 105, 51)}
 </style>
 
 <body ng-controller="createController">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-      <img src="/images/image.png" width="30" height="30" alt="">
-    </a>
-    <a class="navbar-brand" href="#">ProjectCinema</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Search</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav" style="margin-left:auto">
-        <li class="nav-items">
-          <a class="nav-link" href="#">Sign
-            Up </a>
-        </li>
-        <li class="nav-items">
-          <a class="nav-link " href="#" style="text-align:right">Sign In</a>
-        </li>
-      </ul>
-
-    </div>
-  </nav>
   <div>
     <div class="main Main header ">
+        <% include ../header.ejs %>
 
       <h1 class="tieude" style="text-align:center;margin-bottom: 40px;margin-top: 40px;color:rgb(240, 105, 51);text-transform: uppercase;font-weight: bold">
         Tạo Phim Mới </h1>
-
-
     </div>
     <div class="film container">
       <div class="row">
@@ -100,16 +74,17 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Nhập nội dung của bộ phim"
                 ng-model="noiDung"></textarea>
             </div>
-            <button ng-click="taoPhim()" class="btn btn-primary" style="display: block;margin-left :auto;background-color:rgb(240, 105, 51);
+            <button type="submit"ng-click="taoPhim()" class="btn btn-primary" style="display: block;margin-left :auto;background-color:rgb(240, 105, 51);
                                     border-color: #007bff00 ;border-radius: 20px;font-weight: bold">
               <i class="fas fa-cloud-upload-alt"></i>Tải lên</button>
+              
           </form>
         </div>
       </div>
     </div>
   </div>
+  
+  <% include ../footer.ejs %>
 </body>
-
-<script src="/javascripts/movie/create.js"></script>
 
 </html>
