giao diện đăng ký và sửa UI

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,40 +5,45 @@
 </style>
 
 <body>
-
-    <div class="my-top-header-text" style=" padding-bottom: 50px;
-    ">
-        <h1 style="font-family: fantasy;color:red"> Project Cinema </h1>
+    <div style="padding-left: 30px;padding-top: 20px;padding-bottom: 30px;background-color:#990000">
+        <h1 class="customcolor" style="font-family: fantasy;">My Cinema </h1>
     </div>
-    <div style=" background-color: whitesmoke;
+    <div class="padding" style=" background-color: #CC0000;
 ">
-        <nav class="navbar navbar-expand-lg ">
-            <a class="navbar-brand" href="#">
-                <img src="/images/camera.png" width="30" height="30" alt="">
+        <nav class="navbar navbar-expand-lg">
+            <a class="navbar-brand customcolor" href="/">
+                <i class="fa fa-home " aria-hidden="true" style="font-size: 40px"></i>
             </a>
-            <a class="navbar-brand" href="#">ProjectCinema</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-                aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <!-- <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="#">Search</a>
                     </li>
-                </ul>
+                </ul> -->
                 <ul class="navbar-nav" style="margin-left:auto">
-                    <li class="nav-items">
-                        <a class="nav-link" href="#">Sign
-                            Up </a>
+                    <li class="nav-items ">
+                        <a class="customcolor textbold " href="/users/signup">Đăng ký</a>
                     </li>
-                    <li class="nav-items">
+                </ul>
+                <!-- <li class="nav-items">
                         <a class="nav-link " href="#" style="text-align:right">Sign In</a>
+                    </li> -->
+                <ul class="navbar-nav" style="margin-left:20px">
+                    <li class="nav-items">
+                        <a class="customcolor textbold" href="/movie/create">Tạo phim
+                        </a>
+
+
                     </li>
                 </ul>
 
             </div>
         </nav>
+    </div>
     </div>
 </body>
 
