--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,40 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: #FF0000;
+}
+
+.hide {
+  display: none;
+}
+.padding{
+  width: 100%;
+  padding-left: 10px;
+    padding-right: 20px;
+}
+.customcolor{
+  color:white
+  
+}
+.textbold{
+  font-size: 30px;
+  text-transform: uppercase;
+    font-weight: bold;
+}
+.my-text-bold{
+  font-size: 20px;
+  font-weight: bold;
+}
+.title-center{
+  margin-top: 20px;
+  text-align: center
+}
+.sizeicon{
+  width: 30px;
+  height: 30px;
+}
+.sizefont{
+  size: 30px
 }
