--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,13 +1,12 @@
-<footer class="text-center" style="padding: 20px;
-              background: whitesmoke; position: initial;
-    width: 100%;
-    bottom: 0px
-              ">
+<footer class="text-center" style="position: absolute;padding: 20px;
+              background: #CC0000;
+    width: 100%;bottom: 0;display:inline-block">
     <div class="container">
         <div class="row">
-            <div class="col-lg-12">
+            <div class="col-lg-12 " style="color:white; font-size: 30px;">
                 Copyright ©
             </div>
         </div>
     </div>
 </footer>
+
