--- a/views/movie/create.ejs
+++ b/views/movie/create.ejs
@@ -3,24 +3,16 @@
 
 <head>
  
-  <title>Create Movie</title>
   
-  <script src="/javascripts/movie/create.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
     crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
   <link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <script>
-    $(function () {
-      $("#datepicker").datepicker();
-      $("#datepicker").datepicker('setDate', 'today');
-    });
-  </script>
+  
 
 </head>
 <style class="Main header">
@@ -28,7 +20,7 @@
   background-image: url("https://staticdelivery.nexusmods.com/images/110/535448-1328651760.jpg");
   background-size: cover
 } */
-    .createMovie{font-weight: bold;color:rgb(240, 105, 51)}
+    .createMovie{font-weight: bold;color:black}
 </style>
 
 <body ng-controller="createController">
@@ -36,7 +28,7 @@
     <div class="main Main header ">
         <% include ../header.ejs %>
 
-      <h1 class="tieude" style="text-align:center;margin-bottom: 40px;margin-top: 40px;color:rgb(240, 105, 51);text-transform: uppercase;font-weight: bold">
+      <h1 class="tieude" style="text-align:center;margin-bottom: 40px;margin-top: 40px;color:#FF3333;text-transform: uppercase;font-weight: bold">
         Tạo Phim Mới </h1>
     </div>
     <div class="film container">
@@ -44,10 +36,10 @@
         <div class="Image col-md-4 ">
           <img src="/images/image.png" class="img-fluid" alt="Responsive image">
           <button type="submit" class="btn btn-primary   " style="margin-top: 10px;margin-left: 90px ;
-                        background-color:rgb(240, 105, 51);border-color: #007bff00 ;border-radius: 20px;font-weight: bold">
-            <i class="fas fa-cloud-upload-alt"></i>Tải ảnh lên</button>
+                        background-color:#FF3333 ;border-radius: 20px;font-weight: bold">
+            <i class="fas fa-cloud-upload-alt"></i>Đăng ảnh</button>
         </div>
-        <div class="createMovie col-md-8">
+        <div class="createMovie col-md-8 my-text-bold">
           <form>
             <div class="form-group">
               <label for="exampleInputEmail1">Tên phim</label>
@@ -74,17 +66,29 @@
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Nhập nội dung của bộ phim"
                 ng-model="noiDung"></textarea>
             </div>
-            <button type="submit"ng-click="taoPhim()" class="btn btn-primary" style="display: block;margin-left :auto;background-color:rgb(240, 105, 51);
-                                    border-color: #007bff00 ;border-radius: 20px;font-weight: bold">
-              <i class="fas fa-cloud-upload-alt"></i>Tải lên</button>
+            <button  type="submit"ng-click="taoPhim()" class="btn btn-primary" style="display: block;margin-left :auto;background-color:#FF3333;
+                                   ;border-radius: 20px;font-weight: bold">
+              <i class="fa fa-film" aria-hidden="true" href="/deafaut"></i>
+            </i>Đăng phim</button>
               
           </form>
         </div>
       </div>
     </div>
   </div>
-  
+  <footer >
   <% include ../footer.ejs %>
+</footer>
 </body>
 
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+  <script>
+    $(function () {
+      $("#datepicker").datepicker();
+      $("#datepicker").datepicker('setDate', 'today');
+    });
+  </script>
+ <script src="/javascripts/movie/create.js"></script>
 </html>
