--- a/views/movie/details.ejs
+++ b/views/movie/details.ejs
@@ -3,32 +3,53 @@
 
 <head >
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+    
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="/javascripts/movie/details.js"></script>
 </head>
 
 <body>
     <% include ../header.ejs %>
+    
+<form role="form" >
+        <div class="container col-sm-12 col-md-5 my-upload-image text-center animated fadeIn"style="    margin-top: 50px;
+        margin-bottom: 50px;">
+            <img src="/images/test.jpg">
+        </div>
 
-    <div class="container my-detail-film ng-scope" >
+        <div class="container col-sm-6 col-md-4 my-form-film animated flipInX">
+                <div class="from-group title-center ">
+                        <span style="font-size:50px "> {{phim.tenPhim}} </span>
+                    </div>
+
+            <div class="form-group">
+                <span style="font-size:28px"><strong style="font-size:30px">Thể loại phim:</strong>{{phim.theLoai}}</span>
+            </div>
+
+            <div class="form-group">
+                <span style="font-size:28px"><strong style="font-size:30px"> Thời gian phát hành: </strong>{{phim.ngayRaMat| date:'dd-MM-yyyy' }}</span>
+            </div>
+
+            <div class="form-group">
+                   <span style="font-size:28px"> <strong style="font-size:30px">Nội dung mô tả:</strong> {{phim.noiDung}} </span>
+               
+            </div>
+        </div>
+    </form>
+    <!-- <div class="container my-detail-film ng-scope" >
             <div class="container my-container-center my-title-header animated flipInX">
                 <h1 class="title-name-film ng-binding"> {{phim.tenPhim}}</h1>
             </div>
             <div class="container col-sm-12 col-md-7 animated flipInX">
-                <h4 class="ng-binding"> Thể loại: &nbsp; {{phim.theLoai}}  </h4>
+                <h4 class="ng-binding"> Thể loại: {{phim.theLoai}}  </h4>
                 <h4 class="ng-binding"> Ngày ra mắt: &nbsp;  {{phim.ngayRaMat| date:'dd-MM-yyyy' }} </h4>
-                <h4> Nội dung mô tả: </h4>
-                <p class="ng-binding"> {{phim.noiDung}}  </p>
+                <h4> Nội dung mô tả: {{phim.noiDung}}   </h4>
             </div>
-            </div>
+            </div> -->
 
         <!-- <div class="container my-container-center my-bot-form">
                     <button type="submit " class="btn btn-primary my-btn text-center animated slideInUp" onclick="javascript:window.location.href='/'" style="" id="btnReturn">
@@ -48,16 +69,20 @@
                 src="https://firebasestorage.googleapis.com/v0/b/filmapplication-9a88c.appspot.com/o/imagess%2FIMG1501950100367.JPG?alt=media&amp;token=1e840f7c-6f78-48d0-b491-12315f98527c">
         </div>
     </div> -->
-    <footer style="position: absolute;
-            bottom: 0px;
-            width: 95%;">
+    <footer >
         <% include ../footer.ejs %>
     </footer>
 
-    <p id="id" ng-show="false"><%= id %></p>
+    <p id="id" class="hide"><%= id %></p>
 </body>
 
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script src="/javascripts/movie/details.js"></script>
+
 </html>
+
 
 
 
