đăng ký và load ảnh

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="text-center" style="position: absolute;padding: 20px;
+<footer class="text-center" style="padding: 20px;
               background: #CC0000;
     width: 100%;bottom: 0;display:inline-block">
     <div class="container">
