--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,6 +5,7 @@
 </style>
 
 <body>
+    <title>My Cinema</title>
     <div style="padding-left: 30px;padding-top: 20px;padding-bottom: 30px;background-color:#990000">
         <h1 class="customcolor" style="font-family: fantasy;">My Cinema </h1>
     </div>
@@ -28,10 +29,11 @@
                     <li class="nav-items ">
                         <a class="customcolor textbold " href="/users/signup">Đăng ký</a>
                     </li>
+                
+                <li class="nav-items" style="margin-left:20px" >
+                        <a class="customcolor textbold " href="/users/signin">Đăng nhập</a>
+                    </li>
                 </ul>
-                <!-- <li class="nav-items">
-                        <a class="nav-link " href="#" style="text-align:right">Sign In</a>
-                    </li> -->
                 <ul class="navbar-nav" style="margin-left:20px">
                     <li class="nav-items">
                         <a class="customcolor textbold" href="/movie/create">Tạo phim
