--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -74,8 +74,9 @@
             </div>
         </div>
     </div>
+    <footer>
     <% include ../footer.ejs %>
-
+</footer>
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
