--- a/views/users/signin.ejs
+++ b/views/users/signin.ejs
@@ -1,4 +1,24 @@
-<div id="login-container" class="parent ng-scope" ng-controller="LoginController">
+<!DOCTYPE html>
+<html ng-app="movie">
+<head>
+    <title>
+        <%= title %>
+    </title>
+    <link rel="shortcut icon" href="../images/icon.jpg" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
+    <% include ../header.ejs %>
+
+</head>
+<body>
+<div id="login-container" class="parent ng-scope" ng-controller="loginController">
         <div class="container">
             <div class="col-md-6 col-md-offset-3">
                 <form name="createForm" ng-validate="validationOptions" class="sign-up-form ng-pristine ng-valid ng-isolate-scope" novalidate="novalidate">
@@ -16,7 +36,7 @@
                     <div class="row">
                         <div class="col-md-6"><a data-toggle="modal" data-target="#myModal" class="forgot-link" href="#">Quên
                                 mật khẩu ?</a></div>
-                        <button type="submit" ng-click="login()" id="register-button" class="btn-login create-form-button btn btn-primary">Đăng
+                        <button type="submit" ng-click="dangNhap()" id="register-button" class="btn-login create-form-button btn btn-primary">Đăng
                             nhập
                         </button>
                     </div>
@@ -60,3 +80,19 @@
             </div>
         </div>
     </div>
+</body>
+<script src="stylesheet" href="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<script>
+    $(function () {
+        $("#datepicker").datepicker();
+        $("#datepicker").datepicker("setDate", new Date());
+    });
+</script>
+
+<script src="/javascripts/users/signin.js"></script>
+
+
+</html>
