--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -40,7 +40,7 @@
                     </div>
                     <div class="form-group my-text-bold">
                         <label for="pwd">Mật khẩu:</label>
-                        <input name="password" ng-model="matKhau" type="password" class="form-control ng-pristine ng-untouched ng-valid ng-empty"
+                        <input name="password" ng-model="password" type="password" class="form-control ng-pristine ng-untouched ng-valid ng-empty"
                             id="pwd" placeholder="Nhập mật khẩu">
                     </div>
                     <div class="form-group my-text-bold">
