--- a/views/header.ejs
+++ b/views/header.ejs
@@ -25,31 +25,34 @@
                         <a class="nav-link" href="#">Search</a>
                     </li>
                 </ul> -->
+                <ul class="navbar-nav" style="margin-left:auto" ng-show="isLogin">
+                    <li class="navbar-nav" style="margin-left:auto ">
+                        <a href="/movie/create" class="customcolor textbold" style="margin-right:20px">
+                            <i class="fas fa-user"></i> {{tenNguoiDung}}</a>
+                    </li>
+                    <li class="navbar-nav" style="margin-left:auto ">
+                        <a class="customcolor textbold" href="/movie/create">Tạo phim</a>
+                    </li>
+                    <li> <a href="../"><i ng-click="logOut()" style="font-size: 30px; margin-left:20px;color:white" class="fas fa-power-off "></i>
+                    </a>
+                    </li>
+                </ul>
                 <ul class="navbar-nav" style="margin-left:auto " ng-show="!isLogin">
                     <li class="nav-items ">
                         <a class="customcolor textbold " href="/users/signup">Đăng ký</a>
                     </li>
-                
-                <li class="nav-items" style="margin-left:20px" >
+
+                    <li class="nav-items" style="margin-left:20px">
                         <a class="customcolor textbold " href="/users/signin">Đăng nhập</a>
                     </li>
                 </ul>
-                <a href="../"><i ng-click="logOut()"  ng-show="isLogin" 
-                    class="fas fa-power-off " ></i></a>
 
-                <ul class="navbar-nav" style="margin-left:20px" ng-show="isLogin">
-                    <li class="nav-items">
-                        <a class="customcolor textbold" href="/movie/create">Tạo phim
-                        </a>
-                    </li>
-                </ul>
-                <i ng-show="isLogin">
-                    <a href="/movie/create" style="font-size:30px;float: right ;margin-right: 15px;margin-top:10px ;font-family: 'Righteous', cursive;">
-                        <b><i class="fas fa-user"></i> {{tenNguoiDung}}</b></a>
-                        
-                      
 
-                </i>
+                <!-- <ul class="navbar-nav" style="margin-left:20px" ng-show="isLogin">
+                    <a class="customcolor textbold" href="/movie/create">Tạo phim</a> -->
+                <!-- <a href="../"><i ng-click="logOut()" style="color: white" class="fas fa-power-off "></i></a></ul>
+                </ul> -->
+
 
             </div>
         </nav>
