gán ảnh theo id - lỗi không create được

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
       <div class="border col-md-4" ng-repeat="movie in listMovie" style="float: left ; margin-top:10px">
         <a href="/{{movie._id}}" style="text-decoration: none; color:black">
 
-          <img src="images/{{movie.image}}" style="margin-top: 10px;height: 300px; width:400px;object-fit: cover;">
+          <img src="" id="image" style="margin-top: 10px;height: 300px; width:400px;object-fit: cover;">
           <div class="detail">
             <h2 class="name-film ng-binding" style="margin-top: 20px;
             "> {{movie.tenPhim}} </h2>
