--- a/views/movie/details.ejs
+++ b/views/movie/details.ejs
@@ -20,7 +20,7 @@
 <form role="form" >
         <div class="container col-sm-12 col-md-5 my-upload-image text-center animated fadeIn"style="    margin-top: 50px;
         margin-bottom: 50px;">
-          <img src="images/{{movie.image}}}" style="margin-top: 10px;height: 300px; width:400px;object-fit: cover;">
+          <img src="" id="image" style="margin-top: 10px;height: 300px; width:400px;object-fit: cover;" id="image">
         </div>
 
         <div class="container col-sm-6 col-md-4 my-form-film animated flipInX">
