đã hiện ảnh theo id bên details | vẫn chưa hiện bên index

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
       <div class="border col-md-3" ng-repeat="movie in listMovie" style="float: left ; margin-top:10px">
         <a href="/{{movie._id}}" style="text-decoration: none; color:black">
         
-          <img src=""  id="image"style="margin-top: 10px;height: 300px; width:400px;object-fit: cover;">
+          <img src="" id="image" style="margin-top: 10px;height: 300px; width:400px;object-fit: cover;">
           <div class="detail" >
             <h2 class="name-film ng-binding"> {{movie.tenPhim}} </h2>
             <p class="content-film ng-binding">
@@ -60,7 +60,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="/javascripts/movie/detail.js"></script>
+<!-- <script src="/javascripts/movie/details.js"></script> -->
 <script src="/javascripts/index.js"></script>
 </html>
 
