--- a/views/users/signin.ejs
+++ b/views/users/signin.ejs
@@ -40,7 +40,7 @@
                             nhập
                         </button>
                     </div>
-                    <hr>
+                    <!-- <hr>
                     <div class="row external-login-content">
                         <div class="col-md-6">
                             <a href="/api/auth/google" class="btn btn-block btn-social btn-lg btn-google">
@@ -52,7 +52,7 @@
                                 <span class="fa fa-facebook"></span> Facebook
                             </a>
                         </div>
-                    </div>
+                    </div> -->
 
                 </form>
             </div>
