--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,14 +55,15 @@
     </div>
   </div>
 
-  <footer>
-    <% include footer.ejs %>
-  </footer>
+
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="/javascripts/movie/details.js"></script>
 <script src="/javascripts/index.js"></script>
+<footer style="position:relative;margin-top: 100px">
+<% include footer.ejs %>
+</footer>
 
 </html>
