--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,10 +1,10 @@
 <footer class="text-center" style="padding: 20px;
-              background: #CC0000;
-    width: 100%;bottom: 0;display:inline-block">
+              background-image: url(/images/header.jpg);
+    width: 100%;bottom: 0;position: absolute;">
     <div class="container">
         <div class="row">
             <div class="col-lg-12 " style="color:white; font-size: 30px;">
-                Copyright ©
+                Copyright © Star Cinema 2018-2019
             </div>
         </div>
     </div>
