--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,12 +5,11 @@
 </style>
 
 <body>
-    <title>My Cinema</title>
-    <div style="padding-left: 30px;padding-top: 20px;padding-bottom: 30px;background-color:#990000">
-        <h1 class="customcolor" style="font-family: fantasy;">My Cinema </h1>
+    <title>Star Cinema</title>
+    <div style="padding-left: 30px;padding-top: 20px;padding-bottom: 30px;background-image: url(images/header.jpg)">
+        <h1 class="customcolor" style="font-family: fantasy;">Star Cinema </h1>
     </div>
-    <div class="padding" style=" background-color: #CC0000;
-">
+    <div class="padding" style="background-image: url(/images/nvbar.jpg)">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand customcolor" href="/">
                 <i class="fa fa-home " aria-hidden="true" style="font-size: 40px"></i>
@@ -20,14 +19,10 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <!-- <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Search</a>
-                    </li>
-                </ul> -->
-                <ul class="navbar-nav" style="margin-left:auto" ng-show="isLogin">
+
+                <ul class="navbar-nav" style="margin-left:auto" ng-show="tenNguoiDung">
                     <li class="navbar-nav" style="margin-left:auto ">
-                        <a href="/movie/create" class="customcolor textbold" style="margin-right:20px">
+                        <a href="/users/profile" class="customcolor textbold" style="margin-right:20px">
                             <i class="fas fa-user"></i> {{tenNguoiDung}}</a>
                     </li>
                     <li class="navbar-nav" style="margin-left:auto ">
@@ -37,7 +32,7 @@
                     </a>
                     </li>
                 </ul>
-                <ul class="navbar-nav" style="margin-left:auto " ng-show="!isLogin">
+                <ul class="navbar-nav" style="margin-left:auto " ng-show="!tenNguoiDung">
                     <li class="nav-items ">
                         <a class="customcolor textbold " href="/users/signup">Đăng ký</a>
                     </li>
@@ -46,12 +41,6 @@
                         <a class="customcolor textbold " href="/users/signin">Đăng nhập</a>
                     </li>
                 </ul>
-
-
-                <!-- <ul class="navbar-nav" style="margin-left:20px" ng-show="isLogin">
-                    <a class="customcolor textbold" href="/movie/create">Tạo phim</a> -->
-                <!-- <a href="../"><i ng-click="logOut()" style="color: white" class="fas fa-power-off "></i></a></ul>
-                </ul> -->
 
 
             </div>
