--- a/views/users/signin.ejs
+++ b/views/users/signin.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="movie">
 <head>
-    <title>
-        <%= title %>
-    </title>
+    
     <link rel="shortcut icon" href="../images/icon.jpg" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
@@ -19,24 +17,28 @@
 </head>
 <body>
 <div id="login-container" class="parent ng-scope" ng-controller="loginController">
-        <div class="container">
-            <div class="col-md-6 col-md-offset-3">
-                <form name="createForm" ng-validate="validationOptions" class="sign-up-form ng-pristine ng-valid ng-isolate-scope" novalidate="novalidate">
-                    <div class="col-md-12">
-                        <h1 class="text-center"><strong>Đăng Nhập</strong></h1>
+        <div class="container" >
+            <div class="col-md-6" style="margin: 0 auto">
+                <form name="createForm" ng-validate="validationOptions" class="sign-up-form ng-pristine ng-valid ng-isolate-scope" novalidate="novalidate" >
+                    <div class="col-md-12" style="margin-top:50px;margin-bottom:50px">
+                        <h1 class="text-center " style="    font-size: -webkit-xxx-large;
+                        "><strong>Đăng Nhập</strong></h1>
                     </div>
                     <div class="form-group">
-                        <label for="email">Email:</label>
+                        <label for="email" style="font-size: 20px">Email:</label>
                         <input name="email" ng-model="email" type="text" class="form-control ng-pristine ng-untouched ng-valid ng-empty" id="email" placeholder="Email">
                     </div>
-                    <div class="form-group">
+                    <div class="form-group" style="font-size: 20px">
                         <label for="pwd">Mật khẩu:</label>
                         <input name="password" ng-model="password" type="password" class="form-control ng-pristine ng-untouched ng-valid ng-empty" id="pwd" placeholder="Mật khẩu">
                     </div>
                     <div class="row">
-                        <div class="col-md-6"><a data-toggle="modal" data-target="#myModal" class="forgot-link" href="#">Quên
-                                mật khẩu ?</a></div>
-                        <button type="submit" ng-click="dangNhap()" id="register-button" class="btn-login create-form-button btn btn-primary">Đăng
+                        <div class="col-md-6">
+                            <!-- <a data-toggle="modal" data-target="#myModal" class="forgot-link" href="#">Quên
+                                mật khẩu ? -->
+                            </a>
+                            </div>
+                        <button style=" margin-left: auto;"type="submit" ng-click="dangNhap()" id="register-button" class="btn-login create-form-button btn btn-primary">Đăng
                             nhập
                         </button>
                     </div>
@@ -53,7 +55,7 @@
                             </a>
                         </div>
                     </div> -->
-
+                    
                 </form>
             </div>
         </div>
@@ -94,5 +96,6 @@
 
 <script src="/javascripts/users/signin.js"></script>
 
+<% include ../footer.ejs %>
 
 </html>
