--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="users">
+       
+      
 
 <head>
 
@@ -12,14 +14,13 @@
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
 
-
 </head>
 <style>
 
 </style>
 
 <body ng-controller="usersController">
-    <% include ../header.ejs %>
+        <% include ../header.ejs %>
     <div class="parent ng-scope">
         <div class="container">
             <div class="col-md-12 col-md-offset-3">
@@ -30,7 +31,7 @@
                     </div>
                     <div class="form-group my-text-bold">
                         <label for="name">Tên người dùng:</label>
-                        <input name="name" ng-model="tenNguoiDung" type="text" class="form-control ng-pristine ng-untouched ng-valid ng-empty  "
+                        <input name="name" ng-model="userName" type="text" class="form-control ng-pristine ng-untouched ng-valid ng-empty  "
                           placeholder="Nhập tên người dùng">
                     </div>
                     <div class="form-group my-text-bold">
